# opt-fuzz

./: CMakeLists.txt  LLVMBuild.txt  Makefile  README.md  TODO  opt-fuzz.cpp  package.pl  run-for-64bit-abi.sh
scripts/: run-for-64bit-abi.sh
scripts/test-llvm-backends/: README.md  arm64-1arg.json  arm64-2arg.json  arm64-3arg.json  arm64-4arg.json  arm64-5arg.json  arm64-6arg.json  check-file.pl  run-test.sh  slice-1arg.json  slice-3arg.json  slice-orig.json  slice.json  test1.ll  unused-arg-elimination.pl  x86-64-2arg.json
